<resources>
    <string name="app_name">Github User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Company Name</string>
    <string name="user_name">User Name</string>
    <string name="barier">|</string>
    <string name="repos">0</string>
    <string name="repo_label">repos</string>
    <string name="border">|</string>
    <string name="followings">followings</string>
    <string name="followers">followers</string>
    <string name="location">Location</string>
    <string name="attribution">Icon Made By Pixel Perfect</string>
    <string name="githublogo">GithubLogo</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="option_label">Settings</string>
    <string name="affiliation">Non-Affiliated</string>
    <string name="unknown_location">Location Unknown</string>
    <string name="favorite_label">Favorite</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="title_userdetail">Github User Detail</string>
    <string name="title_favoriteuserdetail">Favorited Github User Detail</string>
    <string name="title_userlist">Github User List</string>
    <string name="title_favorite">Favorite Github User</string>
    <string name="title_setting">Settings</string>
    <string name="query_result_ok">User added to favorite!</string>
    <string name="query_result_bad">User failed to add!</string>
    <string name="delete_result_ok">User removed from favorite!</string>
    <string name="delete_result_bad">User failed to remove!</string>
    <string name="query_all_blank">Currently no user favorited.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reminder_header">Reminder</string>
    <string name="language_header">Language</string>
    <string name="reminder_label">Reminder at 9:00 AM</string>
    <string name="language_label">Select Language</string>
    <string name="key_reminder">reminder</string>
    <string name="key_language" translatable="false">language</string>
    <string name="lang_sum">English</string>

    <string name="reminder_notif_title">Github Users</string>
    <string name="reminder_notif_text">Check out the latest professionals on Github Users</string>
    <string name="reminder_notif_subtext">Let\'s find popular user on Github!</string>

    <string name="set_reminder_label">Daily reminder turned on!</string>
    <string name="disable_reminder_label">Daily reminder turned off!</string>
</resources>