<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite_label"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/option"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/option_label"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>