<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/biodata">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorPrimary">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                tools:src="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_nama_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_username_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="2dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_company_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/company_name"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/border"
                    android:textSize="12sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    />

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/location"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/white"
            app:tabIndicatorColor="@color/grey"
            app:tabIndicatorHeight="4dp"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            app:layout_anchor="@id/biodata"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_baseline_favorite_24_pink"
            android:contentDescription="@string/favorite_button" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>